--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .idea/task_manager.iml
 *.pyc
 .idea/dataSources/f3be11e2-d659-4f83-bf3e-4b579f6f8799/storage_v2/_src_/schema/main.uQUzAA.meta
+settings.py
