--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-/database/database.db
-/database.db
 *.xml
-.idea/task_manager.iml
 *.pyc
-.idea/dataSources/f3be11e2-d659-4f83-bf3e-4b579f6f8799/storage_v2/_src_/schema/main.uQUzAA.meta
+.idea
 settings.py
 *.meta
 database/db
